# WeDiscussPlus

./: .gitignore  CMakeLists.txt  README.md
client/src/: CMakeLists.txt  Client.cpp  ClientUI.cpp  main.cpp
demo_client/: CMakeLists.txt  demo.cpp
demo_server/: CMakeLists.txt  demo.cpp
githooks/: pre-commit
include/client_include/: Client.hpp  ClientUI.hpp
include/server_database/: schema.sql
include/server_include/: ChatroomManager.hpp  ChatroomManagerBalancer.hpp  Database.hpp  LoadBalancer.hpp  LogManager.hpp  LogManagerBalancer.hpp  Manager.hpp  Server.hpp  UserManager.hpp  UserManagerBalancer.hpp
include/shared_include/: Chatroom.hpp  Message.hpp  MessageBuilder.hpp  MessageBuilderInterface.hpp  MessageCreator.hpp  MessageFactory.hpp  MessageInterface.hpp  MessageType.hpp  MockMessage.hpp  User.hpp
include/shared_include/messages/: AuthMessage.hpp  AuthResponseMessage.hpp  ChatroomMessage.hpp  ConnectMessage.hpp  LogRequestMessage.hpp  UserMessage.hpp
server/src/: CMakeLists.txt  ChatroomManager.cpp  ChatroomManagerBalancer.cpp  Database.cpp  LoadBalancer.cpp  LogManager.cpp  LogManagerBalancer.cpp  Manager.cpp  Server.cpp  UserManager.cpp  UserManagerBalancer.cpp  main.cpp
shared_files/: Message.cpp  MessageBuilder.cpp  MessageFactory.cpp  MessageInterface.cpp  MockMessage.cpp
shared_files/messages/: AuthMessage.cpp  AuthResponseMessage.cpp  ChatroomMessage.cpp  ConnectMessage.cpp  LogRequestMessage.cpp  UserMessage.cpp
tests/: CMakeLists.txt
tests/balancer_test/: CMakeLists.txt
tests/message_test/: CMakeLists.txt  MessageTest.cpp  message_test.cpp
tests/mock_objects/: CMakeLists.txt  MockServer.hpp  mock_message.hpp  test_server.hpp
tests/routing_test/: CMakeLists.txt  routing_test.cpp
tests/server_balancer_test/: CMakeLists.txt  ServerBalancerTest.cpp
tests/test_database/: test_schema.sql
